--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <title>Machine Learning HW6 (2017, Fall)</title>
 
 <xmp theme="cerulean" style="display:none;">
-# Assignment #6 Unsupervised learning \& dimension reduction
+# Assignment #6 Unsupervised learning & dimension reduction
 
 <hr>
 ### Announcement
@@ -27,28 +27,28 @@
 * 小老師申請表單 <a href="https://goo.gl/forms/xSn2IjAaXMbouE733" target="_blank"><i class="fa fa-file-text"></i></a>
 * report template <a href="https://docs.google.com/document/d/13c6RqKvcYdSBMxq4yFljUUDnj5fXmv9cGa01yfFwcFU/edit?usp=sharing" target="_blank"><i class="fa fa-file-text"></i></a>
   
-<hr>
+<!-- <hr> -->
 <!-- ### <a href="" target="_blank">Sample code</a>  -->
   
 <hr>
 ### Report
 #### Part A: PCA of colored faces
-* 作業要求:
-(.5%) 請畫出所有臉的平均。
-(.5%) 請畫出前四個 Eigenfaces，也就是對應到前四大 Eigenvalues 的 Eigenvectors。
-(.5%) 請從數據集中挑出任意四個圖片，並用前四大 Eigenfaces 進行 reconstruction，並畫出結果。
+* 作業要求: <br />
+(.5%) 請畫出所有臉的平均。<br />
+(.5%) 請畫出前四個 Eigenfaces，也就是對應到前四大 Eigenvalues 的 Eigenvectors。<br />
+(.5%) 請從數據集中挑出任意四個圖片，並用前四大 Eigenfaces 進行 reconstruction，並畫出結果。<br />
 (.5%) 請寫出前四大 Eigenfaces 各自所佔的比重 (explained variance ratio)，請四捨五入到小數點後一位。
   
 #### Part B: Visualization of Chinese word embedding
-* 作業要求:
-(.6%) 請說明你用哪一個 word2vec 套件，並針對你有調整的參數說明那個參數的意義。
-(.7%) 請在 Report 上放上你 visualization 的結果。
+* 作業要求: <br />
+(.6%) 請說明你用哪一個 word2vec 套件，並針對你有調整的參數說明那個參數的意義。<br />
+(.7%) 請在 Report 上放上你 visualization 的結果。<br />
 (.7%) 請討論你從 visualization 的結果觀察到什麼。
   
 #### Part C: Image clustering
-* 作業要求:
-(.8%) 請比較至少兩種不同的 feature extraction 及其結果。
-(.6%) 請根據自己model的預測的 label，在平面上視覺化 label 的分佈並放在 Report 上。
+* 作業要求: <br />
+(.8%) 請比較至少兩種不同的 feature extraction 及其結果。<br />
+(.6%) 請根據自己model的預測的 label，在平面上視覺化 label 的分佈並放在 Report 上。<br />
 (.6%) 請根據公佈的 label，在平面上視覺化 label 的分佈並放在 Report 上，接著比較和自己預測的 label 之間有何不同？
 
 
