--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
 #### Part C: Image clustering
 * 作業要求: <br />
 (.8%) 請比較至少兩種不同的 feature extraction 及其結果。<br />
-(.6%) 請根據自己model的預測的 label，在平面上視覺化 label 的分佈並放在 Report 上。<br />
-(.6%) 請根據公佈的 label，在平面上視覺化 label 的分佈並放在 Report 上，接著比較和自己預測的 label 之間有何不同？
+(.6%) 請根據自己 model 的預測的 label，在平面上視覺化 label 的分佈並放在 Report 上。<br />
+(.6%) 請根據公佈的 label，在平面上視覺化 label 的分佈並放在 Report 上，接著比較和自己預測的 label 之間有何不同？<br />
+(正確 label 將在 Kaggle deadline 之後公布在 Kaggle 上)
 
 
 
