--- a/index.html
+++ b/index.html
@@ -59,15 +59,16 @@
 * Basic : No extra dataset. No plagiarism.
 * Allowed toolkits for "PCA of colored faces":
   + NumPy 1.13+
-  + scikit-image 0.13.1
+  + scikit-image 0.13+
 * Allowed toolkits for "Image clustering":
   + Python 3.5+
   + tensorflow 1.3
   + keras 2.0.8
   + pytorch 0.2.0
-  + scikit-image 0.13.1
+  + scikit-image 0.13+
+  + NumPy 1.13+
   + scikit-learn 0.19.1
-  + Numpy, Pandas 0.20+
+  + Pandas 0.20+
   + jieba, gensim, GloVe, matplotlib, h5py
   + Python Standard Lib
 
