--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <hr>
 ### Link
 * 投影片連結 <a href="https://docs.google.com/presentation/d/1v2aJnjqplnQ5YSprp6IXbWM_VPavtolqpgbGWM4HidY" target="_blank"><i class="fa fa-slideshare"></i></a>
-* Kaggle 連結 <a href="https://www.kaggle.com/c/ml-2017fall-hw6" target="_blank"><i class="fa fa-trophy"></i></a>
+* Kaggle 連結 <a href="https://www.kaggle.com/c/ml2017fall-hw6" target="_blank"><i class="fa fa-trophy"></i></a>
 * code 遲交表單 <a href="https://goo.gl/forms/U739TuuKJE3QDdWb2" target="_blank"><i class="fa fa-file-text"></i></a>
 * github 遲交表單 <a href="https://goo.gl/forms/ulB0FqGngd8cmvjf2" target="_blank"><i class="fa fa-file-text"></i></a>
 * 小老師申請表單 <a href="https://goo.gl/forms/xSn2IjAaXMbouE733" target="_blank"><i class="fa fa-file-text"></i></a>
@@ -60,15 +60,18 @@
 * Allowed toolkits for "PCA of colored faces":
   + NumPy 1.13+
   + scikit-image 0.13+
+* Allowed toolkits for "Visualization of Chinese word embedding":
+  + you can use anything
 * Allowed toolkits for "Image clustering":
-  + Python 3.5+
+  + python 3.5+
   + tensorflow 1.3
   + keras 2.0.8
   + pytorch 0.2.0
   + scikit-image 0.13+
-  + NumPy 1.13+
+  + pillow 4.3.0
+  + numpy 1.13+
   + scikit-learn 0.19.1
-  + Pandas 0.20+
+  + pandas 0.20+
   + jieba, gensim, GloVe, matplotlib, h5py
   + Python Standard Lib
 
