--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 #### Part C: Image clustering
 * 作業要求: <br />
 (.5%) 請比較至少兩種不同的 feature extraction 及其結果。<br />
-(.5%) 請根據自己 model 的預測的 label，在二維平面上視覺化 label 的分佈並放在 Report 上。<br />
-(.5%) 請根據公佈的 label，在二維平面上視覺化 label 的分佈並放在 Report 上，接著比較和自己預測的 label 之間有何不同？<br />
+(.5%) 預測 visualization.npy 中的 label，在二維平面上視覺化 label 的分佈。(用 PCA, t-SNE 等工具把你抽出來的 feature 投影到二維，或簡單的取 feature 的前兩維)<br />
+(.5%) visualization.npy 中前 5000 個 images 來自 dataset A，後 5000 個 images 來自 dataset B。請根據這個資訊，在二維平面上視覺化 label 的分佈，接著比較和自己預測的 label 之間有何不同。<br />
 (正確 label 將在 Kaggle deadline 之後公布在 Kaggle 上)
 
 
