--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
   + numpy 1.13+
   + scikit-learn 0.19.1
   + pandas 0.20+
-  + jieba, gensim, GloVe, matplotlib, h5py
+  + matplotlib
+  + h5py
   + Python Standard Lib
 
 </xmp>
