--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <hr>
 ### Link
 * 投影片連結 <a href="https://docs.google.com/presentation/d/1v2aJnjqplnQ5YSprp6IXbWM_VPavtolqpgbGWM4HidY" target="_blank"><i class="fa fa-slideshare"></i></a>
-* Kaggle 連結 <a href="https://www.kaggle.com/c/ml2017fall-hw6" target="_blank"><i class="fa fa-trophy"></i></a>
+* Kaggle 連結 <a href="https://www.kaggle.com/t/3dea5a5172844c9186545a06dcdf0a85" target="_blank"><i class="fa fa-trophy"></i></a>
 * code 遲交表單 <a href="https://goo.gl/forms/U739TuuKJE3QDdWb2" target="_blank"><i class="fa fa-file-text"></i></a>
 * github 遲交表單 <a href="https://goo.gl/forms/ulB0FqGngd8cmvjf2" target="_blank"><i class="fa fa-file-text"></i></a>
 * 小老師申請表單 <a href="https://goo.gl/forms/xSn2IjAaXMbouE733" target="_blank"><i class="fa fa-file-text"></i></a>
