--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@
   + pytorch 0.2.0
   + scikit-image 0.13+
   + pillow 4.3.0
-  + numpy 1.13+
-  + scikit-learn 0.19.1
+  + scikit-learn 0.19+
   + pandas 0.20+
+  + numpy
+  + scipy
   + matplotlib
   + h5py
   + Python Standard Lib
