update sample code

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 * report template <a href="https://docs.google.com/document/d/13c6RqKvcYdSBMxq4yFljUUDnj5fXmv9cGa01yfFwcFU/edit?usp=sharing" target="_blank"><i class="fa fa-file-text"></i></a>
   
 <!-- <hr> -->
-<!-- ### <a href="" target="_blank">Sample code</a>  -->
+### <a href="HW6.ipynb" target="_blank">Sample code</a> 
   
 <hr>
 ### Report
