--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 * 小老師申請表單 <a href="https://goo.gl/forms/xSn2IjAaXMbouE733" target="_blank"><i class="fa fa-file-text"></i></a>
 * report template <a href="https://docs.google.com/document/d/13c6RqKvcYdSBMxq4yFljUUDnj5fXmv9cGa01yfFwcFU/edit?usp=sharing" target="_blank"><i class="fa fa-file-text"></i></a>
   
-<hr>
-### <a href="https://github.com/ntumlta/2017fall-ml-hw6/blob/master/HW6.ipynb" target="_blank">Simple baseline sample code</a> 
+<!-- <hr>
+### <a href="https://github.com/ntumlta/2017fall-ml-hw6/blob/master/HW6.ipynb" target="_blank">Simple baseline sample code</a>  -->
   
 <hr>
 ### Report
